[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/br/BR-GAMEBOARD-FINAL-02.png" type="Texture" id=1]
[ext_resource path="res://assets/materials/resources/resource_wood.tres" type="Material" id=2]
[ext_resource path="res://assets/materials/resources/resource_back.tres" type="Material" id=3]
[ext_resource path="res://assets/materials/resources/resource_stone.tres" type="Material" id=4]
[ext_resource path="res://Games/br/br.gd" type="Script" id=5]
[ext_resource path="res://Games/br/trash.tscn" type="PackedScene" id=6]
[ext_resource path="res://Games/br/slot.tscn" type="PackedScene" id=7]
[ext_resource path="res://Games/br/dispenser.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/materials/items/materyal0.tres" type="Material" id=9]
[ext_resource path="res://assets/materials/items/materyal1.tres" type="Material" id=10]
[ext_resource path="res://assets/materials/resources/resource_food.tres" type="Material" id=11]
[ext_resource path="res://assets/materials/resources/resource_gold.tres" type="Material" id=12]
[ext_resource path="res://assets/materials/resources/resource_steel.tres" type="Material" id=13]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5.15, 0.05, 4.89 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 10.3, 0.1, 9.78 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 1 )
metallic_specular = 0.06
roughness = 0.27
uv1_scale = Vector3( 0.097, 0.182, 0.102 )
uv1_offset = Vector3( 0.5, 0.014, 0.499 )
uv1_triplanar = true

[node name="br" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.016, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
res_mats = [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ) ]
item_mats = [ ExtResource( 9 ), ExtResource( 10 ) ]

[node name="board" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0331401, 0 )

[node name="CollisionShape" type="CollisionShape" parent="board"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="board"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="boardsprite" type="Sprite3D" parent="board"]
transform = Transform( 0.2, 0, 0, 0, -8.74228e-09, 1, 0, -0.2, -4.37114e-08, 0, 0.0901401, 0 )
visible = false
texture = ExtResource( 1 )

[node name="trash" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.17472, 0.046, -2.7039 )
only_resources = true

[node name="dispenser" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.169, 0.046, -2.599 )
dispense = "resource"

[node name="dispenser2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.169, 0.046, 2.599 )
dispense = "item"

[node name="trash2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.175, 0.046, 2.704 )
only_items = true

[node name="slot" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.88763, 0.046, 0 )

[node name="slot2" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.981272, 0.046, 0 )

[node name="slot3" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.957097, 0.046, 0 )

[node name="slot4" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.86737, 0.046, 0 )
